[tool.poetry]
name = "nano-seq"
version = "1.0"
description = ""
authors = ["Hung Ngoc Phat <hungngocphat01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
tqdm = "^4.66.2"
sentencepiece = "^0.2.0"
requests = "^2.31.0"
numpy = "^1.26.4"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
ipython = "^8.23.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
